crates/thread_aware_macros_impl/tests/snapshots/derive__generics_prebound_fq_no_dup.snap
---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
impl<T: ::thread_aware::ThreadAware> ::thread_aware::ThreadAware for PreBoundFq<T> {
    fn relocate(
        &mut self,
        __thread_aware_source: ::core::option::Option<&::thread_aware::Thread>,
        __thread_aware_destination: &::thread_aware::Thread,
    ) {
        ::thread_aware::ThreadAware::relocate(
            &mut self.0,
            __thread_aware_source,
            __thread_aware_destination,
        );
    }
}
