crates/thread_aware_macros_impl/tests/snapshots/derive__generics_prebound_no_dup.snap
---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
impl<T: ThreadAware> ::thread_aware::ThreadAware for PreBound<T> {
    fn relocated(
        &mut self,
        source: ::thread_aware::affinity::MemoryAffinity,
        destination: ::thread_aware::affinity::PinnedAffinity,
    ) {
        ::thread_aware::ThreadAware::relocated(&mut self.0, source, destination);
    }
}
