crates/thread_aware_macros_impl/tests/snapshots/derive__nested_phantom_gets_thread_aware_predicate.snap
---
source: crates/thread_aware_macros_impl/tests/derive.rs
expression: expand(input)
---
impl<T> ::thread_aware::ThreadAware for NestedPhantom<T>
where
    core::marker::PhantomData<T>: ::thread_aware::ThreadAware,
{
    fn relocate(
        &mut self,
        source: Option<::thread_aware::affinity::Affinity>,
        destination: ::thread_aware::affinity::Affinity,
    ) {
        ::thread_aware::ThreadAware::relocate(&mut self.0, source, destination);
    }
}
